[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/Custom/Doors/DoorOpen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Custom/Doors/DoorClosed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Objects/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Kenney_Boardgame/Spritesheets/diceWhite.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Kenney_Boardgame/PNG/Dice/dieWhite_border0.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 5 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 56, 92 )

[node name="DiceDoor" type="Node2D"]
script = ExtResource( 3 )

[node name="Doorway" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="DiceLabel" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, -160 )
frames = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 9 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
